Remove model_name.* keys from en.yml
The intention behind model_name.* keys was to use these values
in miq_policy_controller, but for it to work, these keys would
have to be all under 'dictionary' tree.

In the end, these values are not needed at all. We can safely
use ui_lookup(:model => ...) instead.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,14 +22,6 @@ en:
         # The variable :count is also available
         body: "There were problems with the following fields:"
 
-  model_name:
-    miq_policy_set: Policy Profile
-    miq_event_definition: Event
-    miq_action: Action
-    miq_policy: Policy
-    miq_alert: Alert
-    condition: Condition
-
   dictionary:
     column:
       # "." character not allowed in column key
@@ -780,6 +772,7 @@ en:
       MiqAlertSet:              Alert Profile
       MiqDialog:                Dialog
       MiqEnterprise:            Enterprise
+      MiqEventDefinition:       Event
       MiqGroup:                 EVM Group
       MiqPolicy:                Policy
       MiqPolicySet:             Policy Profile
